--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "jstransform-loader": "^0.1.1",
     "webpack": "^1.4.0-beta4",
-    "jstransform": "^6.2.0"
+    "jstransform": "^6.2.0",
+    "through": "^2.3.4"
   },
   "devDependencies": {
     "jest": "^0.1.37",
