--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuclear-js",
-  "version": "0.3.3",
+  "version": "0.4.0-rc1",
   "description": "A stream based immutable data system",
   "main": "src/facade.js",
   "scripts": {
