--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuclear-js",
-  "version": "0.4.0-rc5",
+  "version": "0.4.0",
   "description": "One-way Immutable State Modelling",
   "main": "src/facade.js",
   "scripts": {
