--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuclear-js",
   "version": "0.4.0",
   "description": "One-way Immutable State Modelling",
-  "main": "src/facade.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "jest"
   },
