--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuclear-js",
-  "version": "0.4.1-rc2",
+  "version": "0.5.0-rc1",
   "description": "One-way Immutable State Modelling",
   "main": "src/main.js",
   "scripts": {
@@ -19,7 +19,13 @@
     "jstransform": "^6.2.0",
     "webpack": "^1.4.0-beta4",
     "jstransform-loader": "^0.1.1",
-    "jest": "^0.1.37",
-    "jasmine": "^2.0.1"
+    "jasmine": "^2.0.1",
+    "karma": "^0.12.25",
+    "jasmine-core": "^2.1.2",
+    "karma-jasmine": "^0.3.1",
+    "karma-chrome-launcher": "^0.1.5",
+    "webpack-dev-server": "^1.6.6",
+    "karma-webpack": "^1.3.1",
+    "karma-jasmine-html-reporter": "^0.1.5"
   }
 }
