Switch test runner to Karma + Jasmine for 0.5.0-rc1
Tests are green for 0.5.0-rc1

This major change moves some of the design closer to traditional flux
while eliminating the binding of reactor level computeds in favor of at
runtime evaluated Getters.  The syncing mechanism should now be done at
the changeObserver / UI data binding layer.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "One-way Immutable State Modelling",
   "main": "src/main.js",
   "scripts": {
-    "test": "jest"
-  },
-  "jest": {
-    "scriptPreprocessor": "jestPreprocessor.js"
+    "test": "karma start --single-run --reporters=progress --log-level error",
+    "test-html": "karma start"
   },
   "author": "Jordan Garcia",
   "license": "MIT",
