--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "stateless"
   ],
   "dependencies": {
-    "immutable": "^3.0.x",
-    "lodash": "^2.4.1"
+    "immutable": "^3.0.x"
   },
   "devDependencies": {
+    "lodash": "^2.4.1",
     "jstransform": "^6.2.0",
     "webpack": "^1.4.0-beta4",
     "jstransform-loader": "^0.1.1",
