--- a/examples/rest-api-example/package.json
+++ b/examples/rest-api-example/package.json
@@ -30,6 +30,8 @@
     "serve-static": "^1.9.2",
     "es6-promise": "^2.1.1",
     "chai-spies": "^0.6.0",
-    "blanket": "^1.1.6"
+    "blanket": "^1.1.6",
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.7.0"
   }
 }
