--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Immutable, reactive Flux architecture. UI Agnostic.",
   "main": "dist/nuclear.js",
   "scripts": {
-    "test": "karma start --single-run --reporters=progress --log-level error",
+    "test": "./node_modules/karma/bin/karma start --single-run --browsers=PhantomJS --reporters=progress --log-level error",
     "test-html": "karma start"
   },
   "author": "Jordan Garcia",
@@ -33,16 +33,17 @@
   "devDependencies": {
     "lodash": "^2.4.1",
     "jstransform": "^6.2.0",
-    "webpack": "^1.4.0-beta4",
     "jstransform-loader": "^0.1.1",
     "jasmine": "^2.0.1",
     "karma": "^0.12.25",
     "jasmine-core": "^2.1.2",
     "karma-jasmine": "^0.3.1",
     "karma-chrome-launcher": "^0.1.5",
-    "webpack-dev-server": "^1.6.6",
     "karma-webpack": "^1.3.1",
     "karma-jasmine-html-reporter": "^0.1.5",
-    "react": "^0.13.2"
+    "react": "^0.13.2",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-es5-shim": "https://github.com/pokehanai/karma-es5-shim/archive/v2.1.0.tar.gz",
+    "webpack": "^1.8.11"
   }
 }
