--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Immutable, reactive Flux architecture. UI Agnostic.",
   "main": "dist/nuclear.js",
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --single-run --browsers=PhantomJS --reporters=progress --log-level error",
-    "test-html": "karma start"
+    "test": "./node_modules/karma/bin/karma start --single-run --browsers=PhantomJS --reporters=progress --log-level=error",
+    "coverage": "./node_modules/karma/bin/karma start --single-run --browsers=PhantomJS --reporters=coverage --log-level=error",
+    "test-html": "./node_modules/karma/bin/karma start --browsers=Chrome --reporters=html --log-level=error"
   },
   "author": "Jordan Garcia",
   "license": "MIT",
@@ -44,6 +45,11 @@
     "react": "^0.13.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-es5-shim": "https://github.com/pokehanai/karma-es5-shim/archive/v2.1.0.tar.gz",
-    "webpack": "^1.8.11"
+    "webpack": "^1.8.11",
+    "grunt": "^0.4.5",
+    "karma-coverage": "^0.3.1",
+    "grunt-karma-coveralls": "^2.5.3",
+    "istanbul": "^0.3.13",
+    "istanbul-instrumenter-loader": "^0.1.2"
   }
 }
