Split out karma configs into grunt tasks
Fix bug with `Number.MAX_SAFE_INTEGER` which is es6 standard.  Use
`Number.MAX_NUMBER` instead

Fix issue with throwing an error during a dispatch messing up the
logging groups

--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "karma-coverage": "^0.3.1",
     "grunt-karma-coveralls": "^2.5.3",
     "istanbul": "^0.3.13",
-    "istanbul-instrumenter-loader": "^0.1.2"
+    "istanbul-instrumenter-loader": "^0.1.2",
+    "grunt-karma": "^0.10.1",
+    "load-grunt-config": "^0.17.1"
   }
 }
