--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "immutable": "^3.4.x"
   },
   "devDependencies": {
+    "eslint": "^0.21.0",
+    "eslint-loader": "^0.11.2",
     "lodash": "^2.4.1",
     "jstransform": "^6.2.0",
     "jstransform-loader": "^0.1.1",
@@ -52,6 +54,7 @@
     "grunt-karma": "^0.10.1",
     "load-grunt-config": "^0.17.1",
     "grunt-contrib-clean": "^0.6.0",
-    "karma-sauce-launcher": "^0.2.11"
+    "karma-sauce-launcher": "^0.2.11",
+    "grunt-eslint": "^13.0.0"
   }
 }
