--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Immutable, reactive Flux architecture. UI Agnostic.",
   "main": "dist/nuclear.js",
   "scripts": {
-    "test": "grunt ci"
+    "test": "grunt ci",
+    "postinstall": "grunt githooks"
   },
   "author": "Jordan Garcia",
   "license": "MIT",
@@ -30,29 +31,30 @@
     "immutable": "^3.4.x"
   },
   "devDependencies": {
-    "lodash": "^2.4.1",
-    "jstransform": "^6.2.0",
-    "jstransform-loader": "^0.1.1",
-    "jasmine": "^2.0.1",
-    "karma": "^0.12.25",
-    "jasmine-core": "^2.1.2",
-    "karma-jasmine": "^0.3.1",
-    "karma-chrome-launcher": "^0.1.5",
-    "karma-webpack": "^1.3.1",
-    "karma-jasmine-html-reporter": "^0.1.5",
-    "react": "^0.13.2",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-es5-shim": "https://github.com/pokehanai/karma-es5-shim/archive/v2.1.0.tar.gz",
-    "webpack": "^1.8.11",
     "grunt": "^0.4.5",
-    "karma-coverage": "^0.3.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-eslint": "^13.0.0",
+    "grunt-githooks": "^0.3.1",
+    "grunt-karma": "^0.10.1",
     "grunt-karma-coveralls": "^2.5.3",
     "istanbul": "^0.3.13",
     "istanbul-instrumenter-loader": "^0.1.2",
-    "grunt-karma": "^0.10.1",
-    "load-grunt-config": "^0.17.1",
-    "grunt-contrib-clean": "^0.6.0",
+    "jasmine": "^2.0.1",
+    "jasmine-core": "^2.1.2",
+    "jstransform": "^6.2.0",
+    "jstransform-loader": "^0.1.1",
+    "karma": "^0.12.25",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-coverage": "^0.3.1",
+    "karma-es5-shim": "https://github.com/pokehanai/karma-es5-shim/archive/v2.1.0.tar.gz",
+    "karma-jasmine": "^0.3.1",
+    "karma-jasmine-html-reporter": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
     "karma-sauce-launcher": "^0.2.11",
-    "grunt-eslint": "^13.0.0"
+    "karma-webpack": "^1.3.1",
+    "load-grunt-config": "^0.17.1",
+    "lodash": "^2.4.1",
+    "react": "^0.13.2",
+    "webpack": "^1.8.11"
   }
 }
