--- a/docs/package.json
+++ b/docs/package.json
@@ -18,6 +18,10 @@
     "react": "^0.13.3",
     "babel-core": "^5.5.4",
     "babel-loader": "^5.1.4",
-    "webpack": "^1.9.10"
+    "webpack": "^1.9.10",
+    "highlight.js": "^8.6.0",
+    "react-highlight": "^0.4.1",
+    "css-loader": "^0.14.4",
+    "style-loader": "^0.12.3"
   }
 }
