--- a/docs/package.json
+++ b/docs/package.json
@@ -9,10 +9,12 @@
   "author": "Jordan Garcia",
   "license": "MIT",
   "devDependencies": {
-    "node-libs-browser": "^0.5.2",
-    "webpack": "^1.9.10",
-    "node-sass": "^3.1.2",
-    "sass-loader": "^1.0.2"
+    "nuclear-js": "^1.0.5",
+    "webpack-dev-server": "^1.9.0",
+    "grunt-webpack": "^1.0.8",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-connect": "^0.10.1"
   },
   "dependencies": {
     "react": "^0.13.3",
@@ -22,6 +24,15 @@
     "highlight.js": "^8.6.0",
     "react-highlight": "^0.4.1",
     "css-loader": "^0.14.4",
-    "style-loader": "^0.12.3"
+    "style-loader": "^0.12.3",
+    "grunt-exec": "^0.4.6",
+    "babel": "^5.5.6",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-babel": "^5.0.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "sass-loader": "^1.0.2",
+    "load-grunt-config": "^0.17.1",
+    "grunt": "^0.4.5"
   }
 }
