--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,12 @@
   "author": "Jordan Garcia",
   "license": "MIT",
   "devDependencies": {
-    "nuclear-js": "^1.0.5"
+    "nuclear-js": "^1.0.5",
+    "webpack-dev-server": "^1.9.0",
+    "grunt-webpack": "^1.0.8",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-connect": "^0.10.1"
   },
   "dependencies": {
     "react": "^0.13.3",
@@ -26,7 +31,6 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-babel": "^5.0.1",
     "grunt-contrib-clean": "^0.6.0",
-    "webpack": "^1.9.10",
     "sass-loader": "^1.0.2",
     "load-grunt-config": "^0.17.1",
     "grunt": "^0.4.5"
