--- a/package.json
+++ b/package.json
@@ -27,33 +27,33 @@
     "stateless"
   ],
   "dependencies": {
-    "immutable": "^3.4.x"
+    "immutable": "^3.7.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-eslint": "^13.0.0",
+    "grunt-eslint": "^14.0.0",
     "grunt-githooks": "^0.3.1",
-    "grunt-karma": "^0.10.1",
+    "grunt-karma": "^0.11.0",
     "grunt-karma-coveralls": "^2.5.3",
-    "istanbul": "^0.3.13",
-    "istanbul-instrumenter-loader": "^0.1.2",
-    "jasmine": "^2.0.1",
-    "jasmine-core": "^2.1.2",
-    "jstransform": "^6.2.0",
-    "jstransform-loader": "^0.1.1",
-    "karma": "^0.12.25",
-    "karma-chrome-launcher": "^0.1.5",
-    "karma-coverage": "^0.3.1",
+    "istanbul": "^0.3.15",
+    "istanbul-instrumenter-loader": "^0.1.3",
+    "jasmine": "^2.3.1",
+    "jasmine-core": "^2.3.4",
+    "jstransform": "11.0.1",
+    "jstransform-loader": "^0.2.0",
+    "karma": "^0.12.36",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-coverage": "^0.4.1",
     "karma-es5-shim": "https://github.com/pokehanai/karma-es5-shim/archive/v2.1.0.tar.gz",
-    "karma-jasmine": "^0.3.1",
-    "karma-jasmine-html-reporter": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.5",
+    "karma-jasmine-html-reporter": "^0.1.8",
+    "karma-phantomjs-launcher": "^0.2.0",
     "karma-sauce-launcher": "^0.2.11",
-    "karma-webpack": "^1.3.1",
+    "karma-webpack": "^1.5.1",
     "load-grunt-config": "^0.17.1",
-    "lodash": "^2.4.1",
-    "react": "^0.13.2",
-    "webpack": "^1.8.11"
+    "lodash": "^3.9.3",
+    "react": "^0.13.3",
+    "webpack": "^1.9.10"
   }
 }
