--- a/docs/package.json
+++ b/docs/package.json
@@ -26,7 +26,8 @@
     "async": "^1.2.1",
     "through": "^2.3.7",
     "mkdirp": "^0.5.1",
-    "marked": "^0.3.3"
+    "marked": "^0.3.3",
+    "grunt-gh-pages": "^0.10.0"
   },
   "dependencies": {
     "babel": "^5.5.8",
