--- a/docs/package.json
+++ b/docs/package.json
@@ -17,7 +17,7 @@
     "node-libs-browser": "^0.5.2",
     "nuclear-js": "^1.0.5",
     "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "webpack-dev-server": "^1.9.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-connect": "^0.10.1",
     "remarkable": "^1.6.0",
