change behavior of the react mixin
recommanded way is to use provide react addon to pass around the
reactor and then don't forget to edit your actions signature and provide
a register method on your modules

isomorphic example

we can pass additional contextTypes to the provideReactor helper

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "stateless"
   ],
   "dependencies": {
-    "immutable": "^3.7.3"
+    "hoist-non-react-statics": "^1.0.2",
+    "immutable": "^3.7.3",
+    "object-assign": "*"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
