--- a/examples/rest-api/package.json
+++ b/examples/rest-api/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "`npm bin`/webpack --progress --colors",
+    "watch": "`npm bin`/webpack --watch --progress --colors"
   },
   "author": "",
   "license": "ISC",
@@ -12,22 +14,14 @@
     "nuclear-js": "^1.0.x",
     "react": "^0.13.0",
     "lodash": "^3.5.0",
-    "keymirror": "^0.1.1"
+    "keymirror": "^0.1.1",
+    "babel-loader": "^5.3.2"
   },
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-connect": "^2.2.0",
     "webpack": "^1.7.3",
     "chai": "^2.1.1",
     "mocha": "^2.2.1",
-    "jsx-loader": "^0.12.2",
-    "babel-core": "^4.7.12",
     "babel-loader": "^4.2.0",
-    "gulp-shell": "^0.4.0",
-    "del": "^1.1.1",
-    "gulp-connect-multi": "^1.0.8",
-    "connect": "^3.3.4",
-    "serve-static": "^1.9.2",
     "es6-promise": "^2.1.1",
     "chai-spies": "^0.6.0",
     "blanket": "^1.1.6",
