--- a/docs/package.json
+++ b/docs/package.json
@@ -10,9 +10,14 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-babel": "^5.0.1",
     "grunt-concurrent": "^1.0.1",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-exec": "^0.4.6",
     "grunt-webpack": "^1.0.8",
     "node-libs-browser": "^0.5.2",
     "nuclear-js": "^1.0.5",
@@ -34,17 +39,12 @@
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
     "css-loader": "^0.14.5",
-    "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-exec": "^0.4.6",
     "highlight.js": "^8.6.0",
     "load-grunt-config": "^0.17.1",
     "node-sass": "^3.2.0",
     "react": "^0.13.3",
     "react-highlight": "^0.4.1",
+    "react-prism": "^1.4.1",
     "sass-loader": "^1.0.2",
     "style-loader": "^0.12.3"
   }
