Update rest-api example

--- a/examples/rest-api/package.json
+++ b/examples/rest-api/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "`npm bin`/webpack --progress --colors",
-    "watch": "`npm bin`/webpack --watch --progress --colors"
+    "start": "./node_modules/webpack/bin/webpack.js --watch --progress"
   },
   "author": "",
   "license": "ISC",
