--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "stateless"
   ],
   "dependencies": {
-    "immutable": "^3.7.3"
+    "immutable": "^3.7.3",
+    "babel-core": "^5.8.29",
+    "babel-loader": "^5.3.2"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
