--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "stateless"
   ],
   "dependencies": {
-    "immutable": "^3.7.3",
-    "babel-core": "^5.8.29",
-    "babel-loader": "^5.3.2"
+    "immutable": "^3.7.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "babel-core": "^5.8.29",
+    "babel-loader": "^5.3.2",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-eslint": "^14.0.0",
     "grunt-githooks": "^0.3.1",
