--- a/examples/hot-reloading/package.json
+++ b/examples/hot-reloading/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "^0.14.3",
+    "nuclear-js": "^1.3.0",
+    "nuclear-js-react-addons": "^0.3.1",
     "react-dom": "^0.14.3"
   },
   "devDependencies": {
