--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "functional",
     "stateless"
   ],
-  "dependencies": {
+  "peerDependencies": {
     "immutable": "^3.7.3"
   },
   "devDependencies": {
@@ -38,6 +38,7 @@
     "grunt-githooks": "^0.3.1",
     "grunt-karma": "^0.12.0",
     "grunt-karma-coveralls": "^2.5.3",
+    "immutable": "^3.7.3",
     "istanbul": "^0.3.15",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine": "^2.3.1",
