--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuclear-js",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Immutable, reactive Flux architecture. UI Agnostic.",
   "main": "dist/nuclear.js",
   "scripts": {
@@ -27,7 +27,7 @@
     "stateless"
   ],
   "dependencies": {
-    "immutable": "^3.7.3"
+    "immutable": "3.7.5"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
