--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 0.10
+        node-version: 20.18.1
 
     # Install grunt-cli globally
     - name: Install grunt-cli
@@ -34,4 +34,4 @@ jobs:
 
     # Run tests
     - name: Run tests
-      run: npm test
+      run: grunt ci
