--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "karma-chrome-launcher": "^0.2.3",
     "karma-coverage": "^0.4.2",
     "karma-es5-shim": "https://github.com/pokehanai/karma-es5-shim/archive/v2.1.0.tar.gz",
+    "karma-firefox-launcher": "^2.1.3",
     "karma-jasmine": "^0.3.6",
     "karma-jasmine-html-reporter": "^0.1.8",
-    "karma-sauce-launcher": "^0.2.14",
     "karma-webpack": "^1.7.0",
     "load-grunt-config": "^0.17.1",
     "lodash": "^4.17.11",
